Fix linkw ith icon support inactive link; fix valign

--- a/left.css
+++ b/left.css
@@ -26,10 +26,18 @@
   margin-left: 20px;
   line-height: 1.6em;
 }
+.linkwithicon.inactive,
 .linkindented.inactive {
   pointer-events: none;
   filter: grayscale(1);
   opacity: .75;
+}
+.linkindented.inactive {
+  white-space: pre;
+}
+.linkwithicon.inactive sub,
+.linkindented.inactive sub {
+  vertical-align: top;
 }
 .aftericon {
   display: inline;
